
 Other changes:

   - Do not install the resources which are managed as GResource (todo #970).
   - myDateCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myDecimalCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFieldCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
   - myIDialog: new get_default_size() interface method.
   - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).
   - mySettings: migrate to G_ADD_PRIVATE (todo #994).
   - my_utils_builder_load_from_resource(): new function.
   - my_utils_container_attach_from_resource(): new function.
   - my_utils_dialog_info(): new function.
   - my_utils_quote() is renamed to my_utils_quote_single().
   - my_utils_quote_regexp(): new function.
   - my_utils_unquote_regexp(): new function.
   - my_utils_uri_get_content(): new function.
   - my_utils_widget_set_margin(): renamed as my_utils_widget_set_margins().
   - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
   - ofoAccountBookRender: migrate to G_ADD_PRIVATE (todo #994).
   - ofaBox: have to/from string, to/from dbms (todo #1029).
   - ofaBox: refactoring exports with ofaFileFormat (todo #1030).
   - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to GResource (todo #826).
   - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDBMSRootBin: migrate to GResource (todo #826).
   - ofaDossierDeletePrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDossierDeletePrefsBin: migrate to GResource (todo #826).
   - ofaFileDir: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormatBin: migrate to GResource (todo #826).
   - ofaGuidedInputBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaGuidedInputBin: migrate to GResource (todo #826).